@@ -23,6 +23,16 @@ case "${target}" in
 			srv_linux_usrregs=yes
 			srv_linux_thread_db=yes
 			;;
+  crisv32-*-linux*)	srv_regobj=reg-crisv32.o
+			srv_tgtobj="linux-low.o linux-crisv32-low.o"
+			srv_linux_regsets=yes
+			srv_linux_thread_db=yes
+			;;
+  cris-*-linux*)	srv_regobj=reg-cris.o
+			srv_tgtobj="linux-low.o linux-cris-low.o"
+			srv_linux_usrregs=yes
+			srv_linux_thread_db=yes
+			;;
   i[34567]86-*-linux*)	srv_regobj=reg-i386-linux.o
 			srv_tgtobj="linux-low.o linux-i386-low.o i387-fp.o"
 			srv_linux_usrregs=yes
